test/aws/terraform/public_access_security_groups_port_rule/port_22_allowed_from_internet_to_ec2_using_tf_ssh_module/cloudrail_results.txt

It seems there is some use of Terraform in your code that is not supported by Cloudrail’s version of Terraform and its related providers. 
Please see detailed log below. You may either change your code to correct these issues, or contact us through https://indeni.com/cloudrail-user-support/ and mentioned job_id '7ad1c52d-b5ab-461e-9bc1-55d09c109eaf'
Error: UnauthorizedOperation: You are not authorized to perform this operation.
	status code: 403, request id: d13df420-5f66-4594-bd93-8b32d7a12f31

  on .terraform/modules/vpc_example_complete-vpc/examples/complete-vpc/main.tf line 5, in data "aws_security_group" "default":
   5: data "aws_security_group" "default" {




